Update canvas size calculation.

--- a/web/goban.html
+++ b/web/goban.html
@@ -51,7 +51,7 @@
           <h1>About goban</h1>
 
           <p>
-            Copyright 2013 by <a href='http://mandrula.com'>Mandrula</a>. Follow us at <a href="http://twitter.com/gobancc">@gobancc</a>.
+            Copyright 2013 by <a href='http://lucasnasif.com'>Lucas Nasif</a>. Follow us at <a href="http://twitter.com/gobancc">@gobancc</a>.
           </p>
         </footer>
        </div>
